--- a/css/styles.css
+++ b/css/styles.css
@@ -5,14 +5,13 @@ For CSS stuff, make good use of the Chrome Developer Tools:
 -- on your own page, use dev tools to add and modify styles directly in the browser.
 */
 
-
-/*
-TODO 4
-add a selector for elements with class "item-watchlist"
-give these elements a display property of inline-block
-and then style them as shown in the example (padding, margin, background, etc)
-*/
-
+.item-watchlist {
+    display: inline-block;
+    margin: 8px 8px 0px 0px;
+    padding: 30px;
+    background: #234350;
+    color: white;
+}
 
 /*
 TODO 5 
@@ -20,6 +19,9 @@ Make all elements have color: gray; by default
 Hint: just apply the style using a parent selector, and then all 
 descendent elements will automatically inherit the same styles
 */
+body {
+	color: #444;
+}
 
 
 #big-header {
@@ -58,5 +60,5 @@ button, input[type="submit"] {
 }
 
 button:disabled {
-	opacity: 0.5;
+	opacity: .7;
 }
